--- a/royal_tweets.Rmd
+++ b/royal_tweets.Rmd
@@ -112,22 +112,19 @@ writeLines(strwrap(df_tweets$text[10], 60))
 Tutorial at \url[https://cran.r-project.org/web/packages/rtweet/vignettes/auth.html]
 
 ```{r eval=FALSE}
-c("#meghanmarkle #princeharry")
+Hashtags <- read_csv("Hashtags.csv", col_names = FALSE)
 ```
 
 
 ```{r eval=FALSE}
 ## name of app you created
-appname <- "Rladies"
+appname <- "SaskiaFreytag"
 
 ## api consumer
-key <- 'fxQxSO4bMYFbDR1CRBI2wykKNybMya0B79GloCIfPxphHsWSmi'
+key <- 'O3G4prQHtVY8mV6XH0BbDFqwy'
 
 ## api comsumer secret 
-secret <- "VHr9jJIigl0Uvf55vf7K79uqwfiWKT5jJQJNPjstXXcj3wecne"
-
-api_key<-'Tx6nu4td9a1L4Cy3WLYgtoxb9'
-api_secret<- "VHr9jJIigl0Uvf55vf7K79uqwfiWKT5jJQJNPjstXXcj3wecne"
+secret <- "nGqAZNnPaqqztuGlQnVYvOoLfmXjuZssMu4JhG2SZiKnQsDhqA"
 
 ## create a token, storing it as object 'twitter_token'
 twitter_token <- create_token(
@@ -138,13 +135,14 @@ twitter_token <- create_token(
 
 ##### Rladies AU
 # Retrieve Tweets with Rladies in it
-rla_tweet <- search_tweets("#meghanmarkle #princeharry", n = 3000,token = twitter_token)
+rla_tweet <- search_tweets(paste0(Hashtags$X1,collapse=" OR ") , n = 3000, token = twitter_token, lang='en')
 class(rla_tweet)
 colnames(rla_tweet)
 summary(sapply(rla_tweet,length))
 
+
 dir.create(file.path("twitter_data"),showWarnings = FALSE)
-write.csv(rla_tweet_df,file.path("twitter_data",paste0("RLAU_search_tweets_",Sys.Date(),".csv")),row.names = FALSE)
+write.csv(rla_tweet, file=file.path("twitter_data",paste0("RoyalWedding_search_tweets_",Sys.Date(),".csv")),row.names = FALSE)
 
 ## access and preview data on the users who posted the tweets
 us <- users_data(rla_tweet) 
