updated crown picture

--- a/Twitter/TwitteR_tutorial.Rmd
+++ b/Twitter/TwitteR_tutorial.Rmd
@@ -4,11 +4,11 @@ author: "Anna Quaglieri & Saskia Freytag"
 date: "useR! July 2018"
 always_allow_html: yes
 output:
-  html_document:
-    theme: simplex
+  github_document:
     toc: yes
     toc_depth: 3
-  github_document:
+  html_document:
+    theme: simplex
     toc: yes
     toc_depth: 3
 ---
@@ -261,7 +261,7 @@ all_words <- all_tweets %>% #
 
 **Save dataset**
 
-```{r}
+```{r eval=FALSE}
 dir.create("Twitter_Tutorial_data",showWarnings = FALSE)
 write_csv(all_words,path = "Twitter_Tutorial_data/combined_royal_time_series.csv")
 ```
@@ -286,7 +286,7 @@ our_hash
 
 Since hashtags are used to associate tweets to a topic/trend/theme it can be interesting to investigate, which other hashtags were used in co-occurance. Here we find all other hashtags that were used more than 80 times. We will plot these in a wordcloud using the `wordcloud2` `r emo::ji("package")`. A wordcloud gives greater prominence to words that appear more frequently in the source text by making them appear larger. 
 
-```{r, wordcloud, message=FALSE}
+```{r, wordcloud, message=FALSE,fig.width=7,fig.height=7}
 library(wordcloud2)
 
 all_hash <- all_words %>% 
@@ -324,17 +324,16 @@ hw <- wordcloud2(all_hash_more, size=1, figPath = crown_path )
 hw
 ```
 
-```{r crown, echo=FALSE, fig.height=5}
-img <- readPNG(file.path("Twitter_tutorial_figures/crown_wordcloud.png"))
-grid.raster(img)
-```
+
+
+![](Twitter_tutorial_figures/crown_wordcloud.png)
+
 
 Interestingly, when we find a lot of hashtags referring to competitions, i.e. \#win, \#competition, \#WinItWednesday. This may be an artefact of collecting data on Thurdays, as there are lots of companies trying to entice users to retweet their content with giveaway competitions such as \#WinItWednesday:
 
-```{r win, echo=FALSE, fig.height=5}
-img <- readPNG(file.path("Twitter_tutorial_figures/win.png"))
-grid.raster(img)
-```
+
+![](Twitter_tutorial_figures/win.png)
+
 
 ## Find popular accounts and tweets 
 
@@ -352,10 +351,7 @@ kable(popular_accounts[1:5,])
 
 Turns out this was \@KensingtonRoyal, which is the offical account of the Kensington Palace and on the day was tweeting out important information like the designer of Meghan Markle's dress:
 
-```{r kensington, echo=FALSE, fig.height=2}
-img <- readPNG(file.path("Twitter_tutorial_figures/kensington.png"))
-grid.raster(img)
-```
+![](Twitter_tutorial_figures/kensington.png)
 
 We might also be interested in the most popular tweet in terms of retweets that we sampled or general in the twitter universe. 
 
@@ -374,10 +370,8 @@ popular_sample$text[1]
 popular_general$text
 ```
 
-```{r lucy, echo=FALSE, fig.height=5}
-img <- readPNG(file.path("Twitter_tutorial_figures/lucy_sempey.png"))
-grid.raster(img)
-```
+
+![](Twitter_tutorial_figures/lucy_sempey.png)
 
 This is not the same tweet in our case `r emo::ji("open_mouth")`. When googling Lucy Sempey you indeed find that her tweet was the most retweeted during the `r emo::ji("crown")` Royal Wedding (<http://news.abs-cbn.com/trending/05/20/18/more-than-6m-tweets-on-harry-and-meghans-big-day>).  
 
